--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -3085,9 +3085,9 @@ CONFIG_HISILICON_PLATFORM_HI3XXX=y
 CONFIG_HI3XXX_POWER_OFF=y
 # CONFIG_HISI_REBOOT_TYPE is not set
 CONFIG_HI3XXX_CMDLINE_PARSE=y
-# CONFIG_HISI_SR is not set
-# CONFIG_HISI_SR_DEBUG is not set
-# CONFIG_HISI_SR_DEBUG_SLEEP is not set
+CONFIG_HISI_SR=y
+CONFIG_HISI_SR_DEBUG=y
+CONFIG_HISI_SR_DEBUG_SLEEP=y
 CONFIG_HISI_LPM3_DEBUG=y
 # CONFIG_HISI_HISEE is not set
 # CONFIG_HI3XXX_MODEM_ETB is not set
