--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4573,5 +4573,13 @@ CONFIG_WBT=y
 
 CONFIG_DEVFREQ_GOV_GPU_SCENE_AWARE=y
 CONFIG_ADVANCED_CHARGE_CONTROL=y
+
+
+#hotplugs
 CONFIG_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_THUNDERPLUG_CONTROL=n
+CONFIG_BLU_HOTPLUG=y
+CONFIG_LAZY_HOTPLUG=y
+CONFIG_INTELLI_HOTPLUG=n
