--- a/arch/arm64/hotplug/Kconfig
+++ b/arch/arm64/hotplug/Kconfig
@@ -3,3 +3,32 @@ config MAKO_HOTPLUG
  	default n
  	help
  	  Mako Hotplug: A custom hotplug MOD by fransico franco
+
+config ALUCARD_HOTPLUG
+	bool "Enable alucard-hotplug cpu hotplug driver"
+	default n
+	help
+	  Generic Alucard-hotplug cpu hotplug driver for ARM SOCs
+
+config INTELLI_HOTPLUG
+        bool "Enable intelli-plug cpu hotplug driver"
+        default n
+        help
+          Generic Intelli-plug cpu hotplug driver for ARM SOCs
+
+config THUNDERPLUG_CONTROL
+	bool "Enable plugging down/up of cores based on load per core"
+	default n
+	help
+	  This driver hotplugs cpu cores based on per-core load
+
+config BLU_HOTPLUG
+        default n
+
+config INTELLI_HOTPLUG
+        default n
+
+config LAZY_HOTPLUG
+        default n
+
+
