--- a/arch/arm64/hotplug/Makefile
+++ b/arch/arm64/hotplug/Makefile
@@ -1,2 +1,8 @@
+obj-$(CONFIG_MAKO_HOTPLUG) += mako_hotplug.o
+obj-$(CONFIG_ALUCARD_HOTPLUG) += alucard_hotplug.o
+obj-$(CONFIG_THUNDERPLUG_CONTROL) += thunderplug.o
+obj-$(CONFIG_INTELLI_HOTPLUG) += intelli_hotplug.o
+obj-$(CONFIG_LAZY_HOTPLUG) += lazyplug.o
+obj-$(CONFIG_BLU_HOTPLUG) += blu_plug.o
 
-obj-$(CONFIG_MAKO_HOTPLUG) 	+= mako_hotplug.o
+
