--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4191,7 +4191,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
-CONFIG_HAVE_DEBUG_KMEMLEAK=y
+2vCONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_VM is not set
@@ -4572,7 +4572,7 @@ CONFIG_WBT=y
 # CONFIG_QUASI is not set
 
 CONFIG_DEVFREQ_GOV_GPU_SCENE_AWARE=y
-CONFIG_ADVANCED_CHARGE_CONTROL=y
+CONFIG_ADVANCED_CHARGE_CONTROL=n
 
 
 #hotplugs
@@ -4583,3 +4583,8 @@ CONFIG_THUNDERPLUG_CONTROL=n
 CONFIG_BLU_HOTPLUG=y
 CONFIG_LAZY_HOTPLUG=y
 CONFIG_INTELLI_HOTPLUG=n
+CONFIG_BRICKED_HOTPLUG=y
+CONFIG_LAZY_HOTPLUG=y
+CONFIG_FAST_HOTPLUG=y
+CONFIG_ZEN_DECISION=n
+CONFIG_ARCH_HISI_MAXFREQ=y
