--- a/arch/arm64/hotplug/Makefile
+++ b/arch/arm64/hotplug/Makefile
@@ -4,5 +4,7 @@ obj-$(CONFIG_THUNDERPLUG_CONTROL) += thunderplug.o
 obj-$(CONFIG_INTELLI_HOTPLUG) += intelli_hotplug.o
 obj-$(CONFIG_LAZY_HOTPLUG) += lazyplug.o
 obj-$(CONFIG_BLU_HOTPLUG) += blu_plug.o
-
-
+obj-$(CONFIG_BRICKED_HOTPLUG) += bricked_hotplug.o
+obj-$(CONFIG_FAST_HOTPLUG) += fast_hotplug.o
+obj-$(CONFIG_LAZY_HOTPLUG) += lazyplug.o
+obj-$(CONFIG_ZEN_DECISION) += zen_decision.o
