--- a/arch/arm64/boot/dts/auto-generate/hisi_6250_cpu.dtsi
+++ b/arch/arm64/boot/dts/auto-generate/hisi_6250_cpu.dtsi
@@ -197,12 +197,12 @@
 	support-target {
 		compatible = "hisi,supportedtarget";
 		support_name = "Kirin 650","Kirin 655";
-		support_value = <2112000>, <2362000>;
-		support_efuse = "false";
+		support_value = <2362000>, <2362000>;
+		support_efuse = "true";
 	};
 
 	target-cpu {
 		compatible = "hisi,targetcpu";
-		target_cpu = "Kirin 655";
+		target_cpu = "Kirin 650";
 	};
   };
