--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4580,12 +4580,12 @@ CONFIG_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_THUNDERPLUG_CONTROL=n
-CONFIG_BLU_HOTPLUG=y
-CONFIG_LAZY_HOTPLUG=y
+CONFIG_BLU_HOTPLUG=n
+CONFIG_LAZY_HOTPLUG=n
 CONFIG_INTELLI_HOTPLUG=n
-CONFIG_BRICKED_HOTPLUG=y
-CONFIG_LAZY_HOTPLUG=y
-CONFIG_FAST_HOTPLUG=y
+CONFIG_BRICKED_HOTPLUG=n
+CONFIG_LAZY_HOTPLUG=n
+CONFIG_FAST_HOTPLUG=n
 CONFIG_ZEN_DECISION=n
 CONFIG_ARCH_HISI_MAXFREQ=y
 CONFIG_HIMA_HOTPLUG=y
