integrate vnswap from Samsung

--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4579,7 +4579,7 @@ CONFIG_DEVFREQ_GOV_GPU_SCENE_AWARE=y
 CONFIG_ADVANCED_CHARGE_CONTROL=n
 
 
-#hotplugs
+#features
 CONFIG_HOTPLUG=y
 CONFIG_MAKO_HOTPLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
@@ -4593,3 +4593,4 @@ CONFIG_FAST_HOTPLUG=n
 CONFIG_ZEN_DECISION=n
 CONFIG_ARCH_HISI_MAXFREQ=y
 CONFIG_HIMA_HOTPLUG=y
+CONFIG_VNSWAP=y
