--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4595,3 +4595,5 @@ CONFIG_ARCH_HISI_MAXFREQ=n
 CONFIG_HIMA_HOTPLUG=y
 CONFIG_VNSWAP=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_CPU_FREQ_GOV_TRIPNDROID=n
+
