--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -165,9 +165,9 @@ config CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
-config CPU_FREQ_DEFAULT_GOV_TRIPNDROID
-	bool "tripndroid"
-	select CPU_FREQ_GOV_TRIPNDROID
+config CPU_FREQ_DEFAULT_GOV_CULTIVATION
+	bool "cultivation"
+	select CPU_FREQ_GOV_CULTIVATION
 	help
 	  Select tripndroid cpu governor as default
 
@@ -360,13 +360,8 @@ config CPU_FREQ_GOV_BLU_ACTIVE
 
 	  If in doubt, say N.
 
-config CPU_FREQ_GOV_TRIPNDROID
-    tristate "'tripndroid' cpufreq governor"
-    depends on CPU_FREQ
-    help
-	  Custom cpu governor designed specificly for multi cpu mobile devices.
-	  Aiming at a balance between performance and battery lifetime, but it
-	  hangs a little bit more towards performance at low latencys.
+config CPU_FREQ_GOV_CULTIVATION
+      bool "'sched' cpufreq governor"
 
 
 config CPU_FREQ_GOV_SCHED
