Come back zram.

--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -4613,6 +4613,6 @@ CONFIG_TCP_CONG_DCTCP=y
 CONFIG_DEFAULT_BIC=y
 
 #zram
-CONFIG_ZRAM=n
-CONFIG_ZRAM_LZ4_COMPRESS=n
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 
