hi6250: revert to original defconfig

--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -40,8 +40,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-weekly"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -251,14 +251,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-# CONFIG_MODULE_FORCE_UNLOAD is not set
-# CONFIG_MODVERSIONS is not set
-# CONFIG_MODULE_SRCVERSION_ALL is not set
-# CONFIG_MODULE_SIG is not set
-# CONFIG_MODULE_COMPRESS is not set
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
@@ -287,7 +280,7 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 # CONFIG_IOSCHED_ROW is not set
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_TEST=m
+# CONFIG_IOSCHED_TEST is not set
 # CONFIG_CFQ_GROUP_IOSCHED is not set
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
@@ -1426,7 +1419,7 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPP_MULTILINK=y
-CONFIG_PPPOE=m
+CONFIG_PPPOE=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
@@ -3898,7 +3891,7 @@ CONFIG_CONNECTIVITY_HI110X_HI6250=y
 CONFIG_HI110X_SDIO_STD_CARD_SUPPORT=y
 CONFIG_HI110X_SDIO_FPGA=y
 CONFIG_HI110X_SDIO_DETECT_FUNCTION=y
-CONFIG_HI1102_PLATFORM=m
+CONFIG_HI1102_PLATFORM=y
 CONFIG_HI1102_PLAT_HW_CHR=y
 CONFIG_HI1102_PLAT_OAL=y
 CONFIG_HI1102_PLAT_FRW=y
@@ -3907,14 +3900,13 @@ CONFIG_HI1102_PLAT_SDT=y
 CONFIG_HI1102_PLAT_PS=y
 CONFIG_HI1102_PLAT_PM=y
 CONFIG_HI1102_PLAT_MAIN=y
-CONFIG_HI1102_WIFI=m
+CONFIG_HI1102_WIFI=y
 CONFIG_HI1102_WIFI_HMAC=y
 CONFIG_HI1102_WIFI_WAL=y
 CONFIG_HI1102_WIFI_MAIN=y
 # CONFIG_HI1102_WIFI_DMAC is not set
 # CONFIG_CONTEXTHUB is not set
-# CONFIG_HUAWEI_BFM=is not set
-# CONFIG_HW_BFMR_HISI is not set
+# CONFIG_HUAWEI_BFM is not set
 # CONFIG_HW_BFMR_QCOM is not set
 # CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION is not set
 CONFIG_HW_GADGET=y
@@ -4399,7 +4391,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_TEST=m
+CONFIG_CRYPTO_TEST=y
 CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
